--- a/trunk/template.html
+++ b/trunk/template.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="leo,hent studio,lamp,php,mysql" />
-<meta name="description" content="hent studio" />
-<meta name="author" content="Lin.x, http://www.lineks.cn" />
-<title>Page</title>
-</head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="author" content="Lin.X,www.lineks.cn" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <title> Page </title>
+ </head>
 
-<body>
-	^!
-</body>
+ <body>
+  ^!
+ </body>
 </html>
 
